--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"/>
 </head>
 <body>
+<div><a href="hello.html">鼠标特效</a></div>
 <canvas id="c"></canvas>
 <script>
     var b = document.body;
